Image alignment fix pt 2

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 #intro-h {
-    align: left;
+    float: left;
     padding-top: 0.25em;
     padding-bottom: 0.1em;
     padding-left: 0.75em;
@@ -39,7 +39,8 @@ body {
 }
 
 #intro-p {
-    align: left;
+    float: left;
+    display: inline;
     padding-top: 0;
     padding-bottom: 0;
     padding-left: 0.75em;
@@ -48,7 +49,8 @@ body {
 }
 
 #headshot {
-    align: right;
+    float: right;
+    display: inline;
     padding-top: 0;
     padding-bottom: 0;
     padding-left: 0.75em;
